# OXOOL

./: .cirrus.yml.disabled  .editorconfig  .gitignore  CONTRIBUTING.md  HACKING.md  Makefile.am  PROBLEMS  README.FILENOTICES.md  README.md  SECURITY.md  Vagrantfile  autogen.sh  browser  browsersync-config.js  config.h.in  config_version.h.in  configure.ac  loolwsd-systemplate-setup  loolwsd.service  loolwsd.spec.in  loolwsd.xml.in  online-systemplate-setup.in  online.pc.in  online.service.in  online.spec.in  online.xml.in  onlinekitconfig-mobile.xcu  onlinekitconfig.xcu.in  oxool.pc.in  oxoolkitconfig-mobile.xcu  oxoolkitconfig.xcu  oxoolwsd-generate-proof-key  oxoolwsd-systemplate-setup  oxoolwsd.service  oxoolwsd.spec.in  oxoolwsd.xml.in  startwsd.sh
SourceHan/: 65-oxool.conf
browser/: Makefile.am  README  npm-shrinkwrap.json.in  package.json
common/: Authorization.cpp  Authorization.hpp  Clipboard.hpp  CommandControl.cpp  CommandControl.hpp  Common.hpp  ConfigUtil.cpp  ConfigUtil.hpp  Crypto.cpp  Crypto.hpp  DummyTraceEventEmitter.cpp  FileUtil.cpp  FileUtil.hpp  JailUtil.cpp  JailUtil.hpp  JsonUtil.hpp  LangUtil.hpp  Log.cpp  Log.hpp  Makefile.am  Message.hpp  MessageQueue.cpp  MessageQueue.hpp  MobileApp.cpp  MobileApp.hpp  Png.hpp  Protocol.cpp  Protocol.hpp  (+15 more)
ossii/: .gitignore  Makefile.am  README.md  online.pc.in  online.spec.in
ossii/browser/: .eslintignore  Makefile.am  README
ossii/browser/admin/: .eslintignore  .eslintrc  Makefile.am  admin.html  login.html
ossii/browser/admin/css/: admin.css  login.css
ossii/browser/admin/js/: color-scheme-switcher.js  global.js
ossii/browser/admin/src/: AdminModule.js  AdminSocketBase.js  Dialog.js  Form.js  Main.js  Toast.js
ossii/browser/admin/standard/Analytics/: admin.html  admin.js
ossii/browser/admin/standard/Log/: admin.html  admin.js
ossii/browser/admin/standard/Overview/: admin.html  admin.js
ossii/browser/css/: branding-desktop.css  color-palette-dark.css  color-palette.css  jsdialogs.css  jssidebar.css  menubar.css  notebookbar.css  oxool.css  spectrum.css
ossii/browser/js/: BrandingData.js  ModuleManager.js  OtherMessages.js  OxOOL.js  main.js  unocommands.js
ossii/browser/js/control/: Control.AlternativeCommand.js  Control.ContextMenu.js  Control.Dialogs.js  Control.Menubar.js  Control.NotebookbarCalc.js  Control.NotebookbarDraw.js  Control.NotebookbarEnhancedBuilder.js  Control.NotebookbarImpress.js  Control.NotebookbarWriter.js  Control.OxOOLMain.js  Control.ReadonlyBar.js  Control.StatusBar.js  IconAlias.js  Parts.Extensions.js  Permission.Extensions.js  Toolbar.Extensions.js
ossii/browser/js/layer/marker/: EnhancedTextInput.js
ossii/browser/js/map/handler/: Map.AlternativeCommand.js  Map.ExternalEdit.js  Map.Icon.js  Map.StateChanges.Extend.js  Map.Tasks.js
ossii/browser/l10n/: ossii-localizations.json
ossii/browser/po/: ossii.pot  zh-TW.po  zh_TW.po
ossii/browser/uiconfig/dialogs/: AutoFilter.js  BindingLineDialog.js  CommonSymbols.js  DataSelect.js  OXSaveAs.js  PdfWatermarkText.js  ShowHelp.js
ossii/browser/uiconfig/drawing/: menubar.json
ossii/browser/uiconfig/presentation/: menubar.json
ossii/browser/uiconfig/spreadsheet/: menubar.json
ossii/browser/uiconfig/text/: menubar.json
ossii/debian-template/: control.in  copyright.in  online-dev.install  online.install  online.postinst  online.preinst  rules
ossii/etc/: Makefile.am
ossii/fonts/: Makefile.am
ossii/scripts/: clean_jails_mounts.sh  mergepo2json.py  po2json.py  unoparser.php
ossii/src/: Makefile.am
ossii/src/development-tools/: Makefile.am  ModuleMaker.cpp
ossii/src/development-tools/module-template/: .gitignore  Makefile.am  ModuleConfiguration.md  README.md  configure.ac  module.spec.in  test.sh
ossii/src/development-tools/module-template/admin/: README  admin.example.js  admin.html
ossii/src/development-tools/module-template/browser/: README  module.example.js  module.js
ossii/src/development-tools/module-template/debian/: control.in
ossii/src/development-tools/module-template/l10n/: localizations.json
ossii/src/development-tools/module-template/po/: README
ossii/src/development-tools/module-template/src/: Module.cpp
ossii/src/development-tools/module-template/utils/: mkl10nfiles.sh
ossii/src/include/: Makefile.am
ossii/src/include/OxOOL/: ConvertBroker.h  ENV.h  HttpHelper.h  Kit.h  L10NTranslator.h  ModuleManager.h  OxOOL.h  OxOOL.h.in  ResourceManager.h  ResourceProvider.h  Util.h  WSD.h  XMLConfig.h  ZipPackage.h
ossii/src/include/OxOOL/Module/: Base.h
ossii/src/include/OxOOL/Net/: PrivateKeyHandler.h
ossii/src/lib/: Makefile.am
ossii/src/lib/OxOOL/: ConvertBroker.cpp  ENV.cpp  HttpHelper.cpp  Kit.cpp  L10NTranslator.cpp  ModuleManager.cpp  OxOOL.cpp  ResourceManager.cpp  Util.cpp  WSD.cpp  ZipPackage.cpp
ossii/src/lib/OxOOL/Module/: Base.cpp  Map.cpp
ossii/src/lib/OxOOL/ModuleManager/: AdminService.cpp  AdminService.hpp  BrowserService.cpp  BrowserService.hpp  ModuleAgent.cpp  ModuleAgent.hpp  ModuleLibrary.cpp  ModuleLibrary.hpp  ResourceService.cpp  ResourceService.hpp
ossii/src/lib/OxOOL/Private/: IconThemeProvider.cpp  IconThemeProvider.hpp  Watermark.cpp  Watermark.hpp
ossii/src/lib/OxOOL/Util/: FileValidator.cpp
ossii/src/modules/: Makefile.am
ossii/src/modules/Alive/: Makefile.am
ossii/src/modules/Announce/: Announce.xml  Makefile.am
ossii/src/modules/Announce/src/: Announce.cpp
ossii/src/modules/FontManager/: .gitignore  FontManager.xml  Makefile.am
ossii/src/modules/FontManager/admin/: admin.html  admin.js
ossii/src/modules/FontManager/po/: FontManager.pot  zh-TW.po
ossii/src/modules/FontManager/src/: FontManager.cpp
ossii/src/modules/ModuleTesting/: Makefile.am  ModuleTesting.xml
ossii/src/modules/ModuleTesting/src/: ModuleTesting.cpp
ossii/src/modules/SoftwareUpgrade/: Makefile.am  SoftwareUpgrade.xml
ossii/src/modules/SoftwareUpgrade/admin/: admin.html  admin.js
ossii/src/modules/SoftwareUpgrade/po/: SoftwareUpgrade.pot  zh-TW.po
ossii/src/modules/SoftwareUpgrade/src/: SoftwareUpgrade.cpp
ossii/src/tools/: Makefile.am
(+1338 files in other folders)
